# jungle-week6

./: .gitignore  CODEOWNERS  CODEX_HOOKS.md  README.md  README_수요코딩회_운영안_배경정리.md  codex-prompt-comparison-plan.md  codex-prompt-comparison-report.md  codex-prompt-comparison-result.md  codex-prompt-feedback-summary.md  sijun-demo-commands.md
.codex/hooks/: user_prompt_submit_log.py
WEI/: CODEX_HOOKS.md  Makefile  README.md
WEI/src/: sql_engine.h
WEI/tests/: test_main.c
cycle_compact/: db.c  db.h  input.sql  main.c  test.c
haegeon/: AGENTS.md  cli.c  execute.c  main.c  main.h  parse.c  test_execute.c
haegeon/analysis/prompt-log/: lessons-learned.md  prompt_events.csv  prompt_events_full.jsonl  session_summary.csv
haegeon/data/: users.table
haegeon/docs/: plan_2_parser.md
seonho/cycle_compact/: input.sql  main.c  test.c
sijun/: AGENTS.md  CMakeLists.txt  README.md  main.c  main.h  manual_test.sql  metadata.c  parser.c  parser_level3.c  repl.c  test_main.c  test_main_integration.c  test_main_unit.c  utils.h
src/: main.c
tests/: integration.sh
wei/: execute.c  main.c  test
wei/logs/: user-prompts.jsonl
